@@ -8,6 +8,11 @@ Changes in 0.60.9:
     commitAction /.../conary/commitaction --repmap ... --module "/.../conary/changemail --user %(user)s --email foo@example.com --email bar@example.com"
     You can add your own modules and run them all from the same commitaction
     using multiple --module arguments to the commitaction script.
+  * Conary can now almost always guess the correct name for the mainDir
+    when it is not %(name)s-%(version)s, if the first addArchive()
+    instance creates exactly one top-level subdirectory and no other
+    top-level files of any sort, in which case it will use that name as
+    the mainDir.
 
 Changes in 0.60.8:
   * The changemail script is now actually packaged, in
